CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT("MDS")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(EIGEN3_INCLUDE_DIR)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

FIND_PACKAGE(OpenCV REQUIRED)
ADD_SUBDIRECTORY(mds_core)
SET(CORELIBS ${QT_LIBRARIES} ${OpenCV_LIBS})

SET(mds_SOURCES main.cpp mds.cpp my_qlabel.cpp)
SET(mds_HEADERS mds.h my_qlabel.h)
SET(mds_FORMS mds.ui)
SET(mds_RESOURCES mds.qrc)

QT4_WRAP_UI(mds_FORMS_HEADERS ${mds_FORMS})
QT4_WRAP_CPP(mds_HEADERS_MOC ${mds_HEADERS})
QT4_ADD_RESOURCES(mds_RESOURCES_RCC ${mds_RESOURCES})

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(mds 
  ${mds_SOURCES}
  ${mds_HEADERS_MOC}
  ${mds_FORMS_HEADERS}
  ${mds_RESOURCES_RCC})
TARGET_LINK_LIBRARIES(mds ${CORELIBS} mdsCore)
